--- a/DDosProject/src/main/resources/config/database.properties
+++ b/DDosProject/src/main/resources/config/database.properties
@@ -2,6 +2,6 @@
 #db info
 
 jdbc.driver=oracle.jdbc.OracleDriver
-jdbc.url=jdbc:oracle:thin:@180.71.250.243:1521:xe
+jdbc.url=jdbc:oracle:thin:@localhost:1521:xe
 jdbc.username=ddos
 jdbc.password=ddos
