--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_191","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Users\\hp\\.m2\\repository\\org\\mybatis\\mybatis-spring\\1.3.2\\mybatis-spring-1.3.2.jar","type":"JAR","hints":{}},"org.mybatis:mybatis-spring:1.3.2"],[{"location":"C:\\Users\\hp\\git\\DDos\\DDosProject","type":"PROJECT","hints":{"PROJECT_NAME":"DDosProject"}},"com.company:app:1.0.0"]]
