도서 이미지

--- a/DDosProject/pom.xml
+++ b/DDosProject/pom.xml
@@ -235,6 +235,15 @@
 			<version>1.4</version>
 		</dependency>
 		
+		<!--XML 파싱 -->
+		
+		<dependency>
+            <groupId>net.sf.sociaal</groupId>
+            <artifactId>xmlpull-xpp3</artifactId>
+            <version>3.0.0.20130526</version>
+        </dependency>
+
+
 	</dependencies>
 	<build>
 		<plugins>
