--- a/DDosProject/pom.xml
+++ b/DDosProject/pom.xml
@@ -234,16 +234,23 @@
 			<artifactId>commons-email</artifactId>
 			<version>1.4</version>
 		</dependency>
-		
+
 		<!--XML 파싱 -->
-		
+
 		<dependency>
-            <groupId>net.sf.sociaal</groupId>
-            <artifactId>xmlpull-xpp3</artifactId>
-            <version>3.0.0.20130526</version>
-        </dependency>
+			<groupId>net.sf.sociaal</groupId>
+			<artifactId>xmlpull-xpp3</artifactId>
+			<version>3.0.0.20130526</version>
+		</dependency>
 
+		<!-- 파일 업로드 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
 
+		
 	</dependencies>
 	<build>
 		<plugins>
