--- a/DDosProject/pom.xml
+++ b/DDosProject/pom.xml
@@ -234,14 +234,25 @@
 			<artifactId>commons-email</artifactId>
 			<version>1.4</version>
 		</dependency>
-		
+
 		<!--XML 파싱 -->
-		
+
 		<dependency>
-            <groupId>net.sf.sociaal</groupId>
-            <artifactId>xmlpull-xpp3</artifactId>
-            <version>3.0.0.20130526</version>
-        </dependency>
+			<groupId>net.sf.sociaal</groupId>
+			<artifactId>xmlpull-xpp3</artifactId>
+			<version>3.0.0.20130526</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.2</version>
+		</dependency>
 
 
 	</dependencies>
